--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <a href="www.alura.com.br" class="container__botao botao__secundario">Assinar somente o Alura+</a>
     <p class="container__aviso">*O preço pode variar caso a assinatura seja feito em outros planos</p>
     </section>
+
+    <section class="container secundario">
+        <img src="img/Plataformas.png" alt="Um monitor e um celular com o Alura plus aberto" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveita a tela grande da TV ou assista no Tablet, Laptop, Celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
 </body>
 
 </html>
