commit #09 -  Nova seção + ajustes/set css

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
             <p class="descricao__texto">Aproveita a tela grande da TV ou assista no Tablet, Laptop, Celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
         </div>
     </section>
+
+    <section class="container secundario">
+        <div class="container__descricao">
+            <p class="descricao__texto">Só o Combo+ oferece Alura Plus e Alura Língua juntos para você ter acesso a cursos de diversas áreas de tecnologia e aprender ou espanhol onde e como quiser</p>
+            <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Combo+</a>
+            <img src="img/Telas.png" alt="Tela da Alura Plus e do Alura Língua">
+        </div>
+    </section>
 </body>
 
 </html>
